tests/fail/wrong_arg.py
def foo(a: int):
    b = 2


foo("Teste")
